// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser multiplicative expressions parses left-associative division chains 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 7,
          },
        },
        "right": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 5,
          },
        },
        "token": {
          "isReserved": false,
          "kind": "Slash",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "/",
        },
        "type": "Binary",
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": Float {
          "kind": 6,
          "value": 3,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Slash",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "/",
      },
      "type": "Binary",
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative integer-division chains 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 32.5,
          },
        },
        "right": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 5,
          },
        },
        "token": {
          "isReserved": false,
          "kind": "Backslash",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "\\",
        },
        "type": "Binary",
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": Float {
          "kind": 6,
          "value": 3,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Backslash",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "\\",
      },
      "type": "Binary",
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative modulo chains 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 7,
          },
        },
        "right": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 5,
          },
        },
        "token": {
          "isReserved": false,
          "kind": "Mod",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "MOD",
        },
        "type": "Binary",
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": Float {
          "kind": 6,
          "value": 3,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Mod",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "MOD",
      },
      "type": "Binary",
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative multiplication chains 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 3,
          },
        },
        "right": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "type": "Literal",
          "value": Float {
            "kind": 6,
            "value": 5,
          },
        },
        "token": {
          "isReserved": false,
          "kind": "Star",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "*",
        },
        "type": "Binary",
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "type": "Literal",
        "value": Float {
          "kind": 6,
          "value": 7,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Star",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "*",
      },
      "type": "Binary",
    },
  },
]
`;
